--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.4"
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
