--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
